testsuite/tests/typecheck/should_fail/ExpandSynsFail1.hs
type Foo = Int
type Bar = Bool

main = print $ (1 :: Foo) == (False :: Bar)
